--- a/Game/index.html
+++ b/Game/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 color="blue" align =center>Tic Tac Toe Game</h1>
+    <h1 color="blue" align = center>Tic Tac Toe Game</h1>
     <div>
         <h2 class="winningMsg" ></h2>
     </div>
@@ -27,7 +27,7 @@
             
         </div>  
     </div>
-    <button class="reset">Reset</button>
+<!--     <button class="reset">Reset</button> -->
     <script src="app.js"></script>
 </body>
 </html>
